Moved to Java 8 syntax from java 9